--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,10 @@
     animation: App-logo-spin infinite 20s linear;
   }
 } */
+.link {
+  color: '#ffffff !important'
+}
+
 .boxing {
   width: "75%";
   border: '1px solid black';
